src/css/home.css
/*
YHack 2014
*/

body{background:#F7393B;margin:0;padding:0}

#h1 {
    margin-top: 24px;
}

h1 {
    text-align: center;
    text-transform: lowercase;
    color: white;
    font-family: "Trebuchet MS", Helvetica, sans-serif;
    font-size: 49px;
    font-weight: normal;
    letter-spacing: 0.05em;
}

.post_results {
    overflow: scroll;
    margin: 5px;
    margin-top: 0px;
    width: 350px;
    border:2px #FFF;
    height: 400px;
    border-radius: 9px;
    border-style: solid;
    font-family: "Trebuchet MS", Helvetica, sans-serif;
    color: #535353;
}

::-webkit-scrollbar {
    display: none;
}

.post_results ul {
    list-style:none;
    text-align:left;
    padding:0;
    margin: 0;
}
.post_results ul li {
    background: white;
/*    background: -moz-linear-gradient(top, #555555 0%, #444444 100%); / FF3.6+ /
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#555555), color-stop(100%,#444444)); / Chrome,Safari4+ /
    background: -webkit-linear-gradient(top, #555555 0%,#444444 100%); / Chrome10+,Safari5.1+ /
    background: -o-linear-gradient(top, #555555 0%,#444444 100%); / Opera11.10+ /
    background: -ms-linear-gradient(top, #555555 0%,#444444 100%); / IE10+ /
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#555555', endColorstr='#444444',GradientType=0 ); / IE6-9 /
    background: linear-gradient(top, #555555 0%,#444444 100%); / W3C /*/
    height: 60px;
    padding: 10px;
    border-bottom: 1px solid #F7393B;
}
.post_results ul li:hover{
    background: #F7393B;
    color: white;
}
.post_results ul li a{
    color: #3C3C3C;
    display: block;
    font-size: 14px;
    font-weight: normal;
    text-align: center;
    text-decoration: none;
    margin-bottom:5px;
}
.post_results ul li a:hover{
    color: white;
    font-weight: normal;
}
.post_results ul li p {
    font-size: 13px;
    margin: 0;
}
.container {
    text-align: center;
}
.subcontainer {
    width: 300px;
    display: inline-block;
    margin-left: 40px;
    margin-right: 40px;
}
#img {
    width: 65px;
    height: 65px;
    position: absolute;
    right: 0px;
    bottom: 7px;
    opacity: 0.5;
}
#img:hover{
    opacity: 1.0;
}

